--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,13 +11,7 @@ jobs:
       - name: Lint
         uses: golangci/golangci-lint-action@v2
         with:
-          # version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: latest
-
-          # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
-
-          # golangci-lint command line arguments.
+          version: v1.43.0
           args:
                 -v
                 --max-same-issues 10
@@ -34,7 +28,6 @@ jobs:
                 -E govet
                 -E ineffassign
                 -E misspell
-                -E revive
                 -E staticcheck
                 -E structcheck
                 -E typecheck
