--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -62,7 +62,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: 'Run Azure CLI commands'
         run: |
-          docker build -f #what ever is the mechanism for this repo .
+          make build
           # docker tag public/aks/periscope ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasqagent:${{ steps.changelog_reader.outputs.version }}
           az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
           # docker push ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasagent:${{ steps.changelog_reader.outputs.version }}
