--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -65,7 +65,7 @@ jobs:
           make build
           # docker tag public/aks/periscope ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasqagent:${{ steps.changelog_reader.outputs.version }}
           az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
-          # docker push ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasagent:${{ steps.changelog_reader.outputs.version }}
+          docker push ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasagent:${{ steps.changelog_reader.outputs.version }}
           echo "acr push done"
 
       
