--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -63,9 +63,9 @@ jobs:
       - name: 'Run Azure CLI commands'
         run: |
           make build
-          # docker tag public/aks/periscope ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasqagent:${{ steps.changelog_reader.outputs.version }}
+          docker tag public/aks/ip-masq-agent-v2 ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ip-masq-agent-v2:${{ steps.changelog_reader.outputs.version }}
           az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
-          docker push ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ipmasagent:${{ steps.changelog_reader.outputs.version }}
+          docker push ${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks/ip-masq-agent-v2${{ steps.changelog_reader.outputs.version }}
           echo "acr push done"
 
       
