Update usage examples, README, and CHANGELOG formatting

--- a/examples/ip-masq-agent.yaml
+++ b/examples/ip-masq-agent.yaml
@@ -20,7 +20,7 @@ spec:
       hostNetwork: true
       containers:
       - name: ip-masq-agent
-        image: docker.io/mattstam/ip-masq-agent:v2.6.1-11-gabd856e-dirty__linux_amd64
+        image: mcr.microsoft.com/aks/ip-masq-agent-v2:v0.1.1
         imagePullPolicy: Always
         args:
           - --v=2
@@ -39,17 +39,17 @@ spec:
           sources:
             # Note these ConfigMaps must be created in the same namespace as the daemonset
             - configMap:
-                name: ip-masq-agent-config
-                optional: true
-                items:
-                  - key: ip-masq-agent
-                    path: ip-masq-agent
-                    mode: 444
+              name: ip-masq-agent-config
+              optional: true
+              items:
+                - key: ip-masq-agent
+                  path: ip-masq-agent
+                  mode: 444
             - configMap:
-                name: ip-masq-agent-config-cloud
-                optional: true
-                items:
-                  # Avoiding duplicate paths
-                  - key: ip-masq-agent-cloud
-                    path: ip-masq-agent-cloud
-                    mode: 444
+              name: ip-masq-agent-config-reconciled
+              optional: true
+              items:
+                # Avoiding duplicate paths
+                - key: ip-masq-agent-reconciled
+                  path: ip-masq-agent-reconciled
+                  mode: 444
