--- a/examples/config-cloud.yaml
+++ b/examples/config-cloud.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ip-masq-agent-config-cloud
+  name: ip-masq-agent-config-reconciled
   namespace: default
   labels:
     component: ip-masq-agent
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 data:
-  ip-masq-agent-cloud: |-
+  ip-masq-agent-reconciled: |-
     nonMasqueradeCIDRs:
       - 1.0.0.0/8
       - 2.2.0.0/16
