--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -62,8 +62,10 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: 'Run Azure CLI commands'
         run: |
+          docker version # what version???
           az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
-          REGISTRY=${{ secrets.AZURE_REGISTRY_SERVER }}/public/aks VERSION=v${{ steps.changelog_reader.outputs.version }} make all-manifest
+          # This won't work, but will at least let us validate the build
+          REGISTRY=widalytest.azurecr.io/public/aks VERSION=v${{ steps.changelog_reader.outputs.version }} make all-manifest
           echo "ACR push done"
 
       
