--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -54,16 +54,16 @@ jobs:
         run: |
            echo "Version: ${{ steps.changelog_reader.outputs.version }}"
            echo "Changes: ${{ steps.changelog_reader.outputs.changes }}"
-      - name: 'Az CLI login'
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      #- name: 'Az CLI login'
+      #  uses: azure/login@v1
+      #  with:
+      #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      #    tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      #    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: 'Run Azure CLI commands'
         run: |
           docker version # what version???
-          az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
+          #az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
           # This won't work, but will at least let us validate the build
           REGISTRY=widalytest.azurecr.io/public/aks VERSION=v${{ steps.changelog_reader.outputs.version }} make all-manifest
           echo "ACR push done"
