--- a/.github/workflows/build-publish-mcr.yml
+++ b/.github/workflows/build-publish-mcr.yml
@@ -63,6 +63,8 @@ jobs:
       - name: 'Run Azure CLI commands'
         run: |
           docker version # what version???
+          docker build -h
+          docker buildx ls
           #az acr login -n ${{ secrets.AZURE_REGISTRY_SERVER }}
           # This won't work, but will at least let us validate the build
           REGISTRY=widalytest.azurecr.io/public/aks VERSION=v${{ steps.changelog_reader.outputs.version }} make all-manifest
