--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,8 @@ jobs:
             -E unused
             -E varcheck
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      labels: [self-hosted, "1ES.Pool=1es-aks-ip-masq-agent-pool-ubuntu"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -46,7 +47,8 @@ jobs:
           make build
         name: Build
   test:
-    runs-on: ubuntu-latest
+    runs-on:
+      labels: [self-hosted, "1ES.Pool=1es-aks-ip-masq-agent-pool-ubuntu"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
